--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:'Times New Roman', Times, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: silver;
+  
+  color:white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+li{
+  list-style: none;
+  background-color: white;
+  color:black;
+  margin: auto;
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  max-width: 20rem;
+  overflow: hidden;
+  word-wrap:break-word;
+
+}
+ul{
+  padding:0px;
 }
